Rozhrani - mobil (hotove)
Nejde mi změnit barva čáry pod nadpisy na modrou, ani její velikost.

--- a/reseni/index.html
+++ b/reseni/index.html
@@ -24,6 +24,7 @@
            </ul> 
         </nav> 
         <section id="uvodni">
+            <div class="text">
             <p>
                 Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!
             </p>
@@ -33,12 +34,16 @@
             <p>
                 Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.
             </p>
+            </div>
             <img src="images/island1.jpg" alt="Island">
-            <p>Photo &copy; <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p> 
+            <p class="popisky"> Photo &copy; <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
         </section>
         <section id="proc">
+            
             <h2>Proč jet na Island</h2>
-            <p>
+                <svg class="cara" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 10h24v4h-24z"/></svg>
+            <div class="text">
+            <p class="cara">
                 Island je domovem největšího evropského ledovce, vodopádu s nejmohutnějším průtokem a tisíců místních koní a divokých hus, které majestátně ve dvojicích křižují nebe a dokreslují tak neopakovatelnou atmosféru tohoto pozoruhodného kousku pevniny kdesi v Atlantiku. K tomu mohutné skalní útvary, čnící z moře jako tiší strážci místních černých lávových pláží, stovky metrů vysoké útesy, které jsou domovem racků a papuchalků a především obrovské vodopády všeho druhu. Panují tu trochu jiná měřítka, a to téměř ve všem. 
             </p>
             <p>
@@ -47,89 +52,98 @@
             <p>
                 Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip; 
             </p>
+            </div>
             <img src="images/island2.jpg" alt="Island">
-            <p>Photo &copy; <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>  
+            <p class="popisky">Photo &copy; <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>  
         </section>
         <section id="co">
             <h2>Co musíte vidět</h2>
+            <svg class="cara" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 10h24v4h-24z"/></svg>
+            <div class="text">
             <p>
-                Poloostrov Reykjanes - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta. 
+                <span style="font-weight:bold">Poloostrov Reykjanes</span>  - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta. 
             </p>
             <p>
-                Reykjavík - Hlavní město určitě nevynecháte kvůli doplnění proviantu. Za zmínku stojí zajímavě architektonicky řešený kostel Hallgrímskirkja, centrum města a přístav se svou výstavbou začínají podobat všem vyspělým velkoměstům v Evropě a příliš milovníky severu neosloví. Zavítáte-li však do spleti uliček pod katedrálou, nebudete litovat, ty už atmosféru mají.
+                <span style="font-weight:bold">Reykjavík</span> - Hlavní město určitě nevynecháte kvůli doplnění proviantu. Za zmínku stojí zajímavě architektonicky řešený kostel Hallgrímskirkja, centrum města a přístav se svou výstavbou začínají podobat všem vyspělým velkoměstům v Evropě a příliš milovníky severu neosloví. Zavítáte-li však do spleti uliček pod katedrálou, nebudete litovat, ty už atmosféru mají.
             </p>
-                Gullfoss - Vodopádové menu začínáme u kaskádovitého vodopádu na řece Hvítá. Postavit se na hranu mezi kaskádami a hledět do té masy vody, řítící se do kaňonu pod vámi je vážně zážitek&hellip;
+                <span style="font-weight:bold">Gullfoss</span> - Vodopádové menu začínáme u kaskádovitého vodopádu na řece Hvítá. Postavit se na hranu mezi kaskádami a hledět do té masy vody, řítící se do kaňonu pod vámi je vážně zážitek&hellip;
             <p>
-                Geysir - Kousek od Gullfossu je oblast, která turisty přitahuje jako magnet. Geysir, který dal název všem ostatním gejzírům světa. On sám se však již téměř odmlčel, údajně chrlí vodu jen velmi zřídka. Zato jeho menší a mladší soused, pojmenovaný Strokkur, prská do okolí vařící sloupec vody v méně či více pravidelných intervalech každých pár minut.
+                <span style="font-weight:bold">Geysir</span> - Kousek od Gullfossu je oblast, která turisty přitahuje jako magnet. Geysir, který dal název všem ostatním gejzírům světa. On sám se však již téměř odmlčel, údajně chrlí vodu jen velmi zřídka. Zato jeho menší a mladší soused, pojmenovaný Strokkur, prská do okolí vařící sloupec vody v méně či více pravidelných intervalech každých pár minut.
             </p>
             <p>
-                Seljalandsfoss - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
+                <span style="font-weight:bold">Seljalandsfoss</span> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
             </p>
+            </div>
             <img src="images/island3.jpg" alt="Island">
-            <p>Photo &copy; <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
+            <p class="popisky">Photo &copy; <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
+            <div class="text">
             <p>
-                Skógafoss - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss.     Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
+                <span style="font-weight:bold">Skógafoss</span> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss.     Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
             </p>
             <p>
-                Dyrhólaey - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.
+                <span style="font-weight:bold">Dyrhólaey</span> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.
             </p>
+            </div>
         </section>
         <section id="Fotogalerie">
             <h2>Fotogalerie</h2>
+            <svg class="cara" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 10h24v4h-24z"/></svg>
+            <div class="popisky">
             <figure>
             <img src="images/nahled1.jpg" alt="Myvatn Aurora">
-            <figcaption> Myvatn Aurora<br>
-            Photo &copy; <a href="https://flic.kr/p/GN5utm">Kriss Williams</a></figcaption> 
+            <figcaption><span style="font-weight:bold">Myvatn Aurora</span> <br>
+            Photo &copy;<a href="https://flic.kr/p/GN5utm">Kriss Williams</a></figcaption> 
             </figure>
             <figure>
             <img src="images/nahled2.jpg" alt="Mountains in Iceland">
-            <figcaption> in Iceland<br>
+            <figcaption><span style="font-weight:bold">Mountains in Iceland</span><br>
             Photo &copy; <a href="https://flic.kr/p/qCC5fd">Kamil Porembiński</a></figcaption>
             </figure>
             <figure>
             <img src="images/nahled3.jpg" alt="Life on Mars">
-            <figcaption> on Mars<br>
+            <figcaption><span style="font-weight:bold">Life on Mars</span><br>
             Photo &copy; <a href="https://flic.kr/p/DrxutX">Kriss Williams</a></figcaption>
             </figure>
             <figure>
             <img src="images/nahled4.jpg" alt="Stokksnes Sands">
-            <figcaption>Stokksnes Sands<br>
+            <figcaption><span style="font-weight:bold">Stokksnes Sands</span><br>
             Photo &copy; <a href="https://flic.kr/p/vzopTG">Kriss Williams</a></figcaption>
             </figure>
             <figure>
             <img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
-            <figcaption>Svartifoss (Black Fall)<br>
+            <figcaption><span style="font-weight:bold">Svartifoss (Black Fall)</span><br>
             Photo &copy; <a href="https://flic.kr/p/v5Butv">Ron Kroetz</a></figcaption>
             </figure>
             <figure>
             <img src="images/nahled6.jpg" alt="Landmannalaugar">
-            <figcaption>Landmannalaugar<br>
+            <figcaption><span style="font-weight:bold">Landmannalaugar</span><br>
             Photo &copy; <a href="https://flic.kr/p/2SWHDd">Michel Osmont</a></figcaption>
             </figure>
             <figure>
             <img src="images/nahled7.jpg" alt="Iceland">
-            <figcaption>Iceland<br>
+            <figcaption><span style="font-weight:bold">Iceland</span><br>
             Photo &copy; <a href="https://flic.kr/p/aaqZLk">Eric Montford</a></figcaption>
             </figure>
             <figure>
             <img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
-            <figcaption>Bruarfoss waterfalls<br>
+            <figcaption><span style="font-weight:bold">Bruarfoss waterfalls</span><br>
             Photo &copy; <a href="https://flic.kr/p/nuUQM7">Moyan Brenn</a></figcaption>
             </figure>
             <figure>
             <img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
-            <figcaption>Jokulsarlon glacier lagoon<br>
+            <figcaption><span style="font-weight:bold">Jokulsarlon glacier lagoon</span><br>
             Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></figcaption>
             </figure>
+            </div>
         </section>
     </main>
     <footer>
-        <p>
-            Texty převzaty z článků:
-            Roman Pech - <a href="http://cestovani.idnes.cz/island-a-roman-pech-0nh-/kolem-sveta.aspx?c=A140519_125122_kolem-sveta_tom">Závislost jménem Island. Tipy znalce, jak zemi levně procestovat</a>
+        <p class="foot">
+            Texty převzaty z článků:<br>
+            Roman Pech - <a href="http://cestovani.idnes.cz/island-a-roman-pech-0nh-/kolem-sveta.aspx?c=A140519_125122_kolem-sveta_tom">Závislost jménem Island. Tipy znalce, jak zemi levně procestovat</a><br>
             Michal Balada - <a href="http://www.pohora.cz/tipy-na-vylety/16352-cesta-kolem-islandu-za-10-dni/">Cesta kolem Islandu za 10 dní</a>
         </p>
-        <p>
+        <p class="foot">
             Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a>
         </p>
     </footer>
