--- a/reseni/index.html
+++ b/reseni/index.html
@@ -41,9 +41,11 @@
         <section id="proc">
             
             <h2>Proč jet na Island</h2>
-                <svg class="cara" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 10h24v4h-24z"/></svg>
+                <div class="cara">
+
+                </div>
             <div class="text">
-            <p class="cara">
+            <p>
                 Island je domovem největšího evropského ledovce, vodopádu s nejmohutnějším průtokem a tisíců místních koní a divokých hus, které majestátně ve dvojicích křižují nebe a dokreslují tak neopakovatelnou atmosféru tohoto pozoruhodného kousku pevniny kdesi v Atlantiku. K tomu mohutné skalní útvary, čnící z moře jako tiší strážci místních černých lávových pláží, stovky metrů vysoké útesy, které jsou domovem racků a papuchalků a především obrovské vodopády všeho druhu. Panují tu trochu jiná měřítka, a to téměř ve všem. 
             </p>
             <p>
@@ -58,8 +60,10 @@
         </section>
         <section id="co">
             <h2>Co musíte vidět</h2>
-            <svg class="cara" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 10h24v4h-24z"/></svg>
-            <div class="text">
+            <div class="cara">
+
+            </div>
+            <div class="text">   
             <p>
                 <span style="font-weight:bold">Poloostrov Reykjanes</span>  - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta. 
             </p>
@@ -87,7 +91,9 @@
         </section>
         <section id="Fotogalerie">
             <h2>Fotogalerie</h2>
-            <svg class="cara" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 10h24v4h-24z"/></svg>
+            <div class="cara">
+
+            </div>
             <div class="popisky">
             <figure>
             <img src="images/nahled1.jpg" alt="Myvatn Aurora">
