--- a/reseni/index.html
+++ b/reseni/index.html
@@ -17,10 +17,10 @@
     <main>
         <nav class="obsah">
            <ul>
-                <li><a href="#uvodni">Úvod</a></li>
+                <li class="uvo" ><a href="#uvodni">Úvod</a></li>
                 <li><a href="#proc">Proč jet na Island</a></li>
                 <li><a href="#co">Co musíte vidět</a></li>
-                <li><a href="#Fotogalerie">Fotogalerie</a></li>
+                <li class="fot" ><a href="#Fotogalerie">Fotogalerie</a></li>
            </ul> 
         </nav> 
         <section id="uvodni">
@@ -35,11 +35,12 @@
                 Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.
             </p>
             </div>
+            <div class="velka">
             <img src="images/island1.jpg" alt="Island">
-            <p class="popisky"> Photo &copy; <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
+            <p class="popisky hlavni"> Photo &copy; <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
+            </div>
         </section>
         <section id="proc">
-            
             <h2>Proč jet na Island</h2>
                 <div class="cara">
 
@@ -55,8 +56,10 @@
                 Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip; 
             </p>
             </div>
+            <div class="velka">
             <img src="images/island2.jpg" alt="Island">
-            <p class="popisky">Photo &copy; <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>  
+            <p class="popisky hlavni">Photo &copy; <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p> 
+             </div>
         </section>
         <section id="co">
             <h2>Co musíte vidět</h2>
@@ -78,8 +81,10 @@
                 <span style="font-weight:bold">Seljalandsfoss</span> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
             </p>
             </div>
+            <div class="velka">
             <img src="images/island3.jpg" alt="Island">
-            <p class="popisky">Photo &copy; <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
+            <p class="popisky hlavni">Photo &copy; <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
+            </div>
             <div class="text">
             <p>
                 <span style="font-weight:bold">Skógafoss</span> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss.     Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
@@ -94,52 +99,63 @@
             <div class="cara">
 
             </div>
-            <div class="popisky">
-            <figure>
-            <img src="images/nahled1.jpg" alt="Myvatn Aurora">
-            <figcaption><span style="font-weight:bold">Myvatn Aurora</span> <br>
-            Photo &copy;<a href="https://flic.kr/p/GN5utm">Kriss Williams</a></figcaption> 
-            </figure>
-            <figure>
-            <img src="images/nahled2.jpg" alt="Mountains in Iceland">
-            <figcaption><span style="font-weight:bold">Mountains in Iceland</span><br>
-            Photo &copy; <a href="https://flic.kr/p/qCC5fd">Kamil Porembiński</a></figcaption>
-            </figure>
-            <figure>
-            <img src="images/nahled3.jpg" alt="Life on Mars">
-            <figcaption><span style="font-weight:bold">Life on Mars</span><br>
-            Photo &copy; <a href="https://flic.kr/p/DrxutX">Kriss Williams</a></figcaption>
-            </figure>
-            <figure>
-            <img src="images/nahled4.jpg" alt="Stokksnes Sands">
-            <figcaption><span style="font-weight:bold">Stokksnes Sands</span><br>
-            Photo &copy; <a href="https://flic.kr/p/vzopTG">Kriss Williams</a></figcaption>
-            </figure>
-            <figure>
-            <img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
-            <figcaption><span style="font-weight:bold">Svartifoss (Black Fall)</span><br>
-            Photo &copy; <a href="https://flic.kr/p/v5Butv">Ron Kroetz</a></figcaption>
-            </figure>
-            <figure>
-            <img src="images/nahled6.jpg" alt="Landmannalaugar">
-            <figcaption><span style="font-weight:bold">Landmannalaugar</span><br>
-            Photo &copy; <a href="https://flic.kr/p/2SWHDd">Michel Osmont</a></figcaption>
-            </figure>
-            <figure>
-            <img src="images/nahled7.jpg" alt="Iceland">
-            <figcaption><span style="font-weight:bold">Iceland</span><br>
-            Photo &copy; <a href="https://flic.kr/p/aaqZLk">Eric Montford</a></figcaption>
-            </figure>
-            <figure>
-            <img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
-            <figcaption><span style="font-weight:bold">Bruarfoss waterfalls</span><br>
-            Photo &copy; <a href="https://flic.kr/p/nuUQM7">Moyan Brenn</a></figcaption>
-            </figure>
-            <figure>
-            <img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
-            <figcaption><span style="font-weight:bold">Jokulsarlon glacier lagoon</span><br>
-            Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></figcaption>
-            </figure>
+            <div class="popisky galerie">
+
+                <figure class="img">
+                    <img src="images/nahled1.jpg" alt="Myvatn Aurora">
+                    <figcaption><span style="font-weight:bold">Myvatn Aurora</span> <br>
+                    Photo &copy;<a href="https://flic.kr/p/GN5utm">Kriss Williams</a>
+                    </figcaption> 
+                </figure>
+
+                <figure class="img">
+                    <img src="images/nahled2.jpg" alt="Mountains in Iceland">
+                    <figcaption><span style="font-weight:bold">Mountains in Iceland</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/qCC5fd">Kamil Porembiński</a></figcaption>
+                </figure>
+
+                <figure class="img"> 
+                    <img src="images/nahled3.jpg" alt="Life on Mars">
+                    <figcaption><span style="font-weight:bold">Life on Mars</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/DrxutX">Kriss Williams</a></figcaption>
+                </figure>
+
+                <figure class="img">
+                    <img src="images/nahled4.jpg" alt="Stokksnes Sands">
+                    <figcaption><span style="font-weight:bold">Stokksnes Sands</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/vzopTG">Kriss Williams</a></figcaption>
+                </figure>
+
+                <figure class="img">
+                    <img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
+                    <figcaption><span style="font-weight:bold">Svartifoss (Black Fall)</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/v5Butv">Ron Kroetz</a></figcaption>
+                </figure>
+
+                <figure class="img">
+                    <img src="images/nahled6.jpg" alt="Landmannalaugar">
+                    <figcaption><span style="font-weight:bold">Landmannalaugar</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/2SWHDd">Michel Osmont</a></figcaption>
+                </figure>
+
+                <figure class="img">
+                    <img src="images/nahled7.jpg" alt="Iceland">
+                    <figcaption><span style="font-weight:bold">Iceland</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/aaqZLk">Eric Montford</a></figcaption>
+                </figure>
+
+                <figure class="img">
+                    <img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
+                    <figcaption><span style="font-weight:bold">Bruarfoss waterfalls</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/nuUQM7">Moyan Brenn</a></figcaption>
+                </figure>
+
+                <figure class="img">
+                    <img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
+                    <figcaption><span style="font-weight:bold">Jokulsarlon glacier lagoon</span><br>
+                    Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></figcaption>
+                </figure>
+                
             </div>
         </section>
     </main>
