--- a/reseni/index.html
+++ b/reseni/index.html
@@ -14,7 +14,9 @@
         <p>Když se řekne Island, spoustě lidem se jako první vybaví sníh a led. Sama jsem tam strávila téměř rok života a zem pokrytou sněhem a ledem jsem zažila jen jediný den. Jednou věcí si ale jistá jsem: že návštěva ostrova pod polárním kruhem je pro každého tak silným zážitkem, že se sem bude chtít vrátit.</p>
         <p class="podpis">Jana Zcela Vymyšlená</p>
     </header>
+    <div class="celek">
     <main>
+        <div class="uznevim">
         <nav class="obsah">
            <ul>
                 <li class="uvo" ><a href="#uvodni">Úvod</a></li>
@@ -35,12 +37,14 @@
                 Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.
             </p>
             </div>
+        </div>
             <div class="velka">
             <img src="images/island1.jpg" alt="Island">
             <p class="popisky hlavni"> Photo &copy; <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
             </div>
         </section>
         <section id="proc">
+            <div class="nevimdve">
             <h2>Proč jet na Island</h2>
                 <div class="cara">
 
@@ -56,12 +60,14 @@
                 Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip; 
             </p>
             </div>
+            </div>
             <div class="velka">
             <img src="images/island2.jpg" alt="Island">
             <p class="popisky hlavni">Photo &copy; <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p> 
              </div>
         </section>
         <section id="co">
+            <div class="nevimtri">
             <h2>Co musíte vidět</h2>
             <div class="cara">
 
@@ -81,11 +87,12 @@
                 <span style="font-weight:bold">Seljalandsfoss</span> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
             </p>
             </div>
+            </div>
             <div class="velka">
             <img src="images/island3.jpg" alt="Island">
             <p class="popisky hlavni">Photo &copy; <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
             </div>
-            <div class="text">
+            <div class="text nevimtri">
             <p>
                 <span style="font-weight:bold">Skógafoss</span> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss.     Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
             </p>
@@ -155,7 +162,7 @@
                     <figcaption><span style="font-weight:bold">Jokulsarlon glacier lagoon</span><br>
                     Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></figcaption>
                 </figure>
-                
+
             </div>
         </section>
     </main>
@@ -169,5 +176,6 @@
             Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a>
         </p>
     </footer>
+</div>
 </body>
 </html>
