--- a/reseni/index.html
+++ b/reseni/index.html
@@ -16,7 +16,7 @@
     </header>
     <div class="celek">
     <main>
-        <div class="uznevim">
+        <div class="section-wrapper">
         <nav class="obsah">
            <ul>
                 <li class="uvo" ><a href="#uvodni">Úvod</a></li>
@@ -44,7 +44,7 @@
             </div>
         </section>
         <section id="proc">
-            <div class="nevimdve">
+            <div class="section-inner">
             <h2>Proč jet na Island</h2>
                 <div class="cara">
 
@@ -67,7 +67,7 @@
              </div>
         </section>
         <section id="co">
-            <div class="nevimtri">
+            <div class="section-inner-two">
             <h2>Co musíte vidět</h2>
             <div class="cara">
 
